--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -163,6 +163,7 @@ a{
     border: 1px solid #e9ecef;
     overflow: hidden;
     transition: all 0.3s ease;
+    color:black;
 }
 
 .rate-card:hover {
