--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -204,6 +204,34 @@ a{
   color: #aaa;
   margin-left: 2rem;
 }
+
+
+
+.history-timeline {
+  /* margin-left: 10px; */
+  /* padding-left: 15px; */
+}
+.history-entry {
+  position: relative;
+  padding: 20px;
+  border-bottom: 2px solid #0d6efd;
+  background: white;
+}
+
+/* .history-entry::before {
+  content: "●";
+  position: absolute;
+  left: -13px;
+  top: 5px;
+  color: #0d6efd;
+  font-size: 12px;
+} */
+
+  
+.history-card{
+  background-color: #f4f4f4;
+}
+
 /* End Create Exchange Docu */
 
 
