--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -478,11 +478,14 @@ a{
     color: #9e9e9e;
     margin-bottom: 0;
 }
+.currencyex-card .rates {
+}
 .currencyex-card .rates h6 {
     font-size: 0.9rem;
     font-weight: normal;
     color: #9e9e9e;
     margin-bottom: 0.25rem;
+    white-space: pre;
 }
 .currencyex-card .rates .value {
     font-size: 1.1rem;
